# ai-cw2-chatbot

backend/: .env.example  .gitignore  README.md  __init__.py  main.py  pyproject.toml  test.py  test_stations.py
backend/api/: app.py  websocket.py
backend/api/database/: __init__.py  connection.py  models.py
backend/api/managers/: __init__.py  websocket_manager.py
backend/api/routes/: __init__.py  conversation.py
backend/chatbot/: __init__.py  chatbot.py  matcher.py  my_train_scrapper.py  nlp.py  scraper_test.py  task1.py  task2.py  task3.py
backend/chatbot/data/: intentions.json  sentences.json
backend/config/: __init__.py  settings.py
backend/data/: __init__.py  import_stations.py  stations.csv  stations_coded.csv  task1_conversation.txt
backend/data/service/: 2022_service_details.csv  2023_service_details.csv  2024_service_details.csv
backend/engine/: __init__.py  chatbot_engine.py  contingencies.json  experta_response.py  sentences.json  weather_contingency.json
backend/prediction/: __init__.py  prediction_service.py
backend/prediction/embedding/: embedding_manager.py  embedding_model.py  qdrant_manager.py
backend/reader/: dump_stations_db.py  excel-to-db.py  my-train-parse.py
backend/scraper/: __init__.py  items.py  scraper.py  test.py
backend/scraper/spiders/: lner.py  nationalrail.py
backend/station/: __init__.py  station_service.py
backend/tests/: __init__.py
backend/tests/test_engine/: test_chatbot_engine.py
backend/tests/test_nlp/: test_matcher.py
backend/tests/test_prediction/: test_prediction_service.py
(+11 files in other folders)
