[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.11.11"
dependencies = [
    "fastapi[standard]>=0.115.11",
    "pip>=25.0.1",
    "psycopg2-binary>=2.9.10",
    "pydantic-settings>=2.8.1",
    "spacy>=3.8.4",
    "sqlmodel>=0.0.24",
    "experta>=1.9.4",
    "selenium>=4.30.0"
]
