[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.11.11"
dependencies = [
    "fastapi[standard]>=0.115.11",
    "pip>=25.0.1",
    "psycopg2-binary>=2.9.10",
    "pydantic-settings>=2.8.1",
    "spacy>=3.8.4",
    "sqlmodel>=0.0.24",
    "experta>=1.9.4",
    "selenium>=4.30.0",
    "pandas>=2.2.3",
    "scikit-learn>=1.6.1",
    "qdrant-client>=1.14.2",
    "scrapy-playwright>=0.0.43",
    "pytest==8.0.0",
    "pytest-cov==4.1.0",
    "pytest-mock==3.12.0"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["api*", "chatbot*", "config*", "data*", "engine*", "prediction*", "reader*", "scraper*", "station*"]
exclude = ["tests*"]

[tool.pytest]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"

[tool.coverage.run]
source = [
    "chatbot",
    "engine",
    "prediction"
]
omit = [
    "tests/*",
    "**/__init__.py"
]
